--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.2",
     "mqtt": "^5.14.1",
-    "mssql": "^12.0.0"
+    "mssql": "^12.0.0",
+    "node-fetch": "^3.3.2"
   }
 }
