--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mqtt": "^5.14.1",
     "mssql": "^12.0.0",
+    "multer": "^2.0.2",
     "node-fetch": "^3.3.2"
   }
 }
